<resources>
    <string name="app_name">todomate_clone</string>
    <string name="main_applicationname_tv">todo mate</string>
    <string name="main_applicationdesription_tv">할 일을 작성, 계획, 관리하세요</string>
    <string name="main_guest_btn">게스트</string>
    <string name="main_login_btn">로그인</string>
    <string name="main_signup_tbtn"><u>가입하기</u></string>
    <string name="login_title_tv">로그인</string>
    <string name="login_emailhint_et">이메일을 입력하세요</string>
    <string name="login_passwordhint_et">비밀번호를 입력하세요</string>
    <string name="login_loginbtn_btn">로그인</string>
    <string name="login_findpassword_tv"><u>비밀번호를 잊었다면?</u></string>
</resources>