<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_logo_iv"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@drawable/todomate_img"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="200dp"
        />

    <TextView
        android:id="@+id/main_application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_applicationname_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_logo_iv"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/main_application_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_applicationdesription_tv"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_application_name"/>

    <android.widget.Button
        android:id="@+id/main_guest_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/main_signup_tbtn"
        app:layout_constraintRight_toLeftOf="@id/main_login_btn"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginEnd="10dp"
        android:background="@drawable/main_btn"
        android:layout_marginBottom="10dp"
        android:text="@string/main_guest_btn"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        />

    <android.widget.Button
        android:id="@+id/main_login_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/main_guest_btn"
        app:layout_constraintBottom_toTopOf="@+id/main_signup_tbtn"
        android:layout_marginStart="10dp"
        android:background="@drawable/main_btn"
        android:layout_marginBottom="10dp"
        android:text="@string/main_login_btn"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        />

    <TextView
        android:id="@+id/main_signup_tbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/main_signup_tbtn"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        />
</androidx.constraintlayout.widget.ConstraintLayout>